improved animations of home component y fixed drawer bug not showing menu when the user scrolls, removed inVierport from home component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,7 @@ mat-drawer-container {
 
 .drawer {
     padding-top: 6em;
+    position: fixed !important;
 }
 
 .loader {
